--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
 
   <div id="go-to-contact"></div>
 
-  <section id="footer"></section>
+  <section id="footer">
+    <p>You can also find me at <i>sg22dia@gmail.com</i>.</p>
   </section>
 
 </body>
