--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <section id="welcome-section">
     <div id="text">
       <h1>Hey, I am Diana :)</h1>
-      <h2>-a web developer-</h2>
+      <h2>-a computer science student-</h2>
       <a href="#projects-section">SCROLL FOR MORE</a>
     </div>
     <img
@@ -116,7 +116,7 @@
   <div id="go-to-contact"></div>
 
   <section id="footer">
-    <p>You can also find me at <i>sg22dia@gmail.com</i>.</p>
+    <p>You can also find me at <i>dianastefan.867@gmail.com</i>.</p>
   </section>
 
 </body>
