--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <a href="#projects-section">SCROLL FOR MORE</a>
     </div>
     <img
-      src="https://media-exp1.licdn.com/dms/image/C5603AQGh0eCQRmPypw/profile-displayphoto-shrink_800_800/0/1656238135124?e=1669852800&v=beta&t=NzugKkrgOIOv7S-zQmAPX6PLVajHo4hF-ZUSz3OEU0A"
+      src="https://github.com/diana389/personal_portfolio/blob/main/poza%20profil.jpeg"
       alt="profile picture">
   </section>
 
