--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <a href="#projects-section">SCROLL FOR MORE</a>
     </div>
     <img
-      src="https://github.com/diana389/personal_portfolio/blob/main/poza%20profil.jpeg"
+      src="https://github.com/diana389/personal_portfolio/blob/main/poza%20profil.jpeg?raw=true"
       alt="profile picture">
   </section>
 
